nobase_include_HEADERS = \
  nmtkit/array.h \
  nmtkit/basic_types.h \
  nmtkit/character_vocabulary.h \
  nmtkit/exception.h \
  nmtkit/init.h \
  nmtkit/random.h \
  nmtkit/reader.h \
  nmtkit/serialization.h \
  nmtkit/simple_text_reader.h \
  nmtkit/unicode.h \
  nmtkit/vocabulary.h \
  nmtkit/word_vocabulary.h
