nobase_include_HEADERS = \
  nmtkit/array.h \
  nmtkit/attention.h \
  nmtkit/backward_encoder.h \
  nmtkit/bahdanau_decoder.h \
  nmtkit/batch_converter.h \
  nmtkit/basic_types.h \
  nmtkit/bidirectional_encoder.h \
  nmtkit/bilinear_attention.h \
  nmtkit/binary_code.h \
  nmtkit/binary_code_predictor.h \
  nmtkit/character_vocabulary.h \
  nmtkit/convolutional_ecc.h \
  nmtkit/corpus.h \
  nmtkit/decoder.h \
  nmtkit/default_decoder.h \
  nmtkit/error_correcting_code.h \
  nmtkit/encoder.h \
  nmtkit/encoder_decoder.h \
  nmtkit/exception.h \
  nmtkit/factories.h \
  nmtkit/formatter.h \
  nmtkit/forward_encoder.h \
  nmtkit/frequency_code.h \
  nmtkit/html_formatter.h \
  nmtkit/huffman_code.h \
  nmtkit/identity_ecc.h \
  nmtkit/inference_graph.h \
  nmtkit/init.h \
  nmtkit/luong_decoder.h \
  nmtkit/mlp_attention.h \
  nmtkit/monotone_sampler.h \
  nmtkit/multilayer_perceptron.h \
  nmtkit/predictor.h \
  nmtkit/random.h \
  nmtkit/sampler.h \
  nmtkit/serialization_utils.h \
  nmtkit/single_text_formatter.h \
  nmtkit/softmax_predictor.h \
  nmtkit/sorted_random_sampler.h \
  nmtkit/vocabulary.h \
  nmtkit/word_vocabulary.h
