lib_LTLIBRARIES = libnmtkit.la

AM_CXXFLAGS = \
  -I$(top_builddir)/src/include \
  $(BOOST_CPPFLAGS) \
  $(EIGEN_CPPFLAGS) \
  $(DYNET_CPPFLAGS) \
  $(CUDA_CPPFLAGS)

libnmtkit_la_SOURCES = \
  attention.cc \
  backward_encoder.cc \
  bahdanau_decoder.cc \
  batch_converter.cc \
  bidirectional_encoder.cc \
  bilinear_attention.cc \
  binary_code.cc \
  binary_code_predictor.cc \
  binary_code_predictor2.cc \
  character_vocabulary.cc \
  convolutional_ecc.cc \
  corpus.cc \
  decoder.cc \
  default_decoder.cc \
  encoder.cc \
  encoder_decoder.cc \
  error_correcting_code.cc \
  factories.cc \
  forward_encoder.cc \
  frequency_code.cc \
  html_formatter.cc \
  huffman_code.cc \
  hybrid_predictor.cc \
  hybrid_predictor2.cc \
  identity_ecc.cc \
  inference_graph.cc \
  init.cc \
  luong_decoder.cc \
  mlp_attention.cc \
  monotone_sampler.cc \
  multilayer_perceptron.cc \
  predictor.cc \
  random.cc \
  single_text_formatter.cc \
  softmax_predictor.cc \
  sorted_random_sampler.cc \
  vocabulary.cc \
  word_vocabulary.cc

